jenkins/jenkins-webhook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-webhook
  namespace: jenkins
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    http:
      paths:
        - path: /github-webhook/
          pathType: Prefix
          backend:
            service:
              name: jenkins
              port:
                number: 8080
